[gd_scene load_steps=15 format=3 uid="uid://cknqbapiv67m0"]

[ext_resource type="Script" path="res://ui/game_ui.gd" id="1_r6b8k"]
[ext_resource type="Texture2D" uid="uid://bn2b7yxaini5j" path="res://addons/Ui/UI books & more.png" id="2_ks0fs"]
[ext_resource type="Texture2D" uid="uid://d1h1uxy3r2kpu" path="res://addons/Ui/ExportedIcons/Icon_Heart.png" id="3_vcihy"]
[ext_resource type="Texture2D" uid="uid://b5lbxhykkgcrf" path="res://addons/Ui/ExportedIcons/Icon_Diamond.png" id="4_tjr4k"]
[ext_resource type="Texture2D" uid="uid://bjvvgsae7noyt" path="res://addons/Ui/ExportedIcons/Icon_Skull.png" id="5_7ic21"]

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jf0ef"]
texture = ExtResource("2_ks0fs")
texture_margin_left = 6.0
texture_margin_top = 6.0
texture_margin_right = 6.0
texture_margin_bottom = 6.0
region_rect = Rect2(224, 336, 32, 16)

[sub_resource type="SystemFont" id="SystemFont_3shol"]
font_names = PackedStringArray("Good Times")
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_yevsg"]
font = SubResource("SystemFont_3shol")
font_size = 25

[sub_resource type="StyleBoxTexture" id="StyleBoxTexture_jgicy"]
texture = ExtResource("2_ks0fs")
texture_margin_left = 10.0
texture_margin_top = 4.0
texture_margin_right = 10.0
texture_margin_bottom = 4.0
axis_stretch_vertical = 2
region_rect = Rect2(48, 272, 32, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lvn8n"]
atlas = ExtResource("3_vcihy")
region = Rect2(0, 0, 222, 208)

[sub_resource type="SystemFont" id="SystemFont_in4i8"]
font_names = PackedStringArray("Good Times")
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_m6ywh"]
font = SubResource("SystemFont_in4i8")
font_size = 18
font_color = Color(0.254902, 0.133333, 0.12549, 1)

[sub_resource type="SystemFont" id="SystemFont_pwl41"]
font_names = PackedStringArray("Good Times")
subpixel_positioning = 0

[sub_resource type="LabelSettings" id="LabelSettings_ja2pt"]
font = SubResource("SystemFont_pwl41")
font_size = 18
font_color = Color(0.254902, 0.133333, 0.12549, 1)

[node name="GameUI" type="CanvasLayer"]
script = ExtResource("1_r6b8k")

[node name="TimePanel" type="Panel" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -84.0
offset_top = 25.0
offset_right = 85.0
offset_bottom = 63.0
grow_horizontal = 2
theme_override_styles/panel = SubResource("StyleBoxTexture_jf0ef")

[node name="TimeLabel" type="Label" parent="TimePanel"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -74.5
offset_right = 72.5
offset_bottom = 38.0
grow_horizontal = 2
text = "01:24"
label_settings = SubResource("LabelSettings_yevsg")
horizontal_alignment = 1
vertical_alignment = 1

[node name="ItensPanel" type="Panel" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -267.0
offset_top = 25.0
offset_right = -13.0
offset_bottom = 65.0
grow_horizontal = 0
theme_override_styles/panel = SubResource("StyleBoxTexture_jgicy")

[node name="TextureRect" type="TextureRect" parent="ItensPanel"]
layout_mode = 0
offset_left = 7.0
offset_top = 10.0
offset_right = 39.0192
offset_bottom = 30.0
texture = SubResource("AtlasTexture_lvn8n")
expand_mode = 3
stretch_mode = 5

[node name="CoreLabel" type="Label" parent="ItensPanel/TextureRect"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -0.0192299
offset_top = -2.0
offset_right = 46.9808
offset_bottom = 21.0
grow_horizontal = 0
text = "999"
label_settings = SubResource("LabelSettings_m6ywh")
vertical_alignment = 1

[node name="TextureRect2" type="TextureRect" parent="ItensPanel"]
layout_mode = 0
offset_left = 84.0
offset_top = 10.0
offset_right = 116.019
offset_bottom = 30.0
texture = ExtResource("4_tjr4k")
expand_mode = 3
stretch_mode = 5

[node name="PreciousLabel" type="Label" parent="ItensPanel/TextureRect2"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -0.0192261
offset_top = -2.0
offset_right = 46.9808
offset_bottom = 21.0
grow_horizontal = 0
text = "999"
label_settings = SubResource("LabelSettings_ja2pt")
vertical_alignment = 1

[node name="TextureRect3" type="TextureRect" parent="ItensPanel"]
layout_mode = 0
offset_left = 161.0
offset_top = 10.0
offset_right = 193.019
offset_bottom = 30.0
texture = ExtResource("5_7ic21")
expand_mode = 3
stretch_mode = 5

[node name="KillsLabel" type="Label" parent="ItensPanel/TextureRect3"]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -0.0192261
offset_top = -2.0
offset_right = 46.9808
offset_bottom = 21.0
grow_horizontal = 0
text = "999"
label_settings = SubResource("LabelSettings_ja2pt")
vertical_alignment = 1
